[package]
name = "pdx"
version = "0.1.0"
edition = "2021"
authors = ["kartik4091 <pithavakartik@gmail.com>"]
description = "PDF Anti-Forensics Analysis Tool"

[dependencies]
lopdf = "0.31"               # PDF manipulation
regex = "1.10"              # Pattern matching
sha2 = "0.10"              # Cryptographic hashes
rayon = "1.8"              # Parallel processing
tokio = { version = "1.35", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"         # JSON support
clap = { version = "4.4", features = ["derive"] } # CLI
indicatif = "0.17"         # Progress bars
tracing = "0.1"           # Logging
tracing-subscriber = "0.3" # Logging setup
anyhow = "1.0"            # Error handling
thiserror = "1.0"         # Error definitions
base64 = "0.21"           # Base64 encoding/decoding
chrono = "0.4"            # Time handling