[package]
name = "pdx"
version = "0.1.0"
edition = "2021"
authors = ["kartik4091 <pithavakartik@gmail.com>"]
description = "PDF Anti-Forensics Analysis Tool"
build = "build.rs"

[dependencies]
# PDF processing
lopdf = { version = "0.31", features = ["std"] }
pdf = { version = "0.8", features = ["embedded_images"] }

# Core functionality
rayon = "1.8"
bitflags = "2.4"
memmap2 = "0.9"
regex = "1.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI interface
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Crypto & hashing
sha2 = "0.10"
aes = "0.8"
base64 = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"